<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ponyville Live!</string>
    <string name="app_desc">Your one-stop app for all your pony listening needs!</string>
    <string name="title_radio">Radio</string>
    <string name="title_video">Video</string>
    <string name="title_shows">Shows</string>
    <string name="title_requests">Requests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="playing_track_notification_title_template">Playing track: %1$s</string>
    <string name="playing_track_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="action_cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accessibility_station_icon">Station icon</string>
    <string name="action_cast">Play on...</string>
    <string name="text_action_change_stream">Change stream</string>
    <string name="content_description_station_logo">Station logo</string>
    <string name="loading">Loading...</string>

    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_pause">play or pause</string>

    <string name="background_img_desc">Album art</string>
    <string name="vote_down">I don\'t like this song</string>
    <string name="vote_up">I like this song</string>

    <string name="local_overlay_route_name">Local On-Top Player</string>
    <string name="media_route_menu_title">Play on...</string>
    <string name="media_route_overlay_text">OVERLAY /)</string>
    <string name="media_route_description">Local overlay route</string>

    <string name="nav_stations">Stations</string>
    <string name="nav_shows">Shows &amp; Podcasts</string>
    <string name="nav_conventions">Conventions</string>
    <string name="nav_songs">Songs</string>

    <string name="nav_schedule">Schedules &amp; Events</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>

</resources>
