<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_stations"
            android:icon="@drawable/ic_radio2"
            android:title="@string/nav_stations" />
        <item
            android:id="@+id/nav_shows"
            android:icon="@drawable/ic_rss"
            android:title="@string/nav_shows" />
        <item
            android:id="@+id/nav_conventions"
            android:icon="@drawable/ic_convention"
            android:title="@string/nav_conventions" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_music"
            android:title="@string/nav_songs" />
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
    </group>

</menu>
