<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_toggle"
        android:orderInCategory="100"
        sothree:showAsAction="never"
        android:title="@string/action_hide"/>

    <item
        android:id="@+id/action_anchor"
        android:orderInCategory="200"
        sothree:showAsAction="never"
        android:title="@string/action_anchor_enable"/>

</menu>
